@@ -1524,3 +1524,31 @@
     content: @fa-var-route;
   }
 }
+
+.lms-ui-icon-finger-up {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-hand-point-up;
+  }
+}
+
+.lms-ui-icon-finger-down {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-hand-point-down;
+  }
+}
+
+.lms-ui-icon-star,
+.lms-ui-icon-karma {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-star;
+  }
+}
