@@ -2561,3 +2561,12 @@ fieldset {
 		}
 	}
 }
+
+.lms-ui-karma-container {
+	display: inline-block;
+	.lms-ui-karma-button,
+	.lms-ui-karma-button {
+		vertical-align: middle;
+		cursor: pointer;
+	}
+}
