@@ -87,6 +87,7 @@
 <script type="text/javascript" src="js/lms-ui-datepicker.js"></script>
 <script type="text/javascript" src="js/lms-ui-combobox.js"></script>
 <script type="text/javascript" src="js/lms-ui-fileupload.js"></script>
+<script type="text/javascript" src="js/lms-ui-karma.js"></script>
 <script>
 
 	$(function() {
