@@ -210,6 +210,9 @@ version 26-git (????-??-??):
   - enhancement: new configuration variable 'phpui.assignment_presentation_format' ('%name' by default)
     allows to change  tariff presentation form (some special symbols related to promotions
     are supported) [chilan]
+  - enhancement: imeplemented customer karma support; 'phpui.customer_karma_change_interval'
+    configuration value ('86400' by default) control how ofter user can change karma for given
+    customer [chilan]
 
 version 25.0 (2020-05-15):
 
